--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -32,20 +32,18 @@ h1,h2,h3 {
 }
 
 ul li {
-    display: block;
+    display: flex;
     list-style: none;
+    align-items: center;
 }
 a{
     text-decoration: none;
 }
-.container{
+.container_head{
     width: 1290px;
     height: 35.9px;
     padding-top: 40px;
     margin: 0 auto;
-}
-
-header .container{
     display: flex;
     align-items: center;
 }
@@ -59,10 +57,12 @@ header .container{
     width: 26px;
     height: 25px;
     margin-right: 10.9px;
+    cursor: pointer;
 }
 .header_logo p{
     font-family: 'Montserrat-Bold', sans-serif;
     font-size: 28px;
+    cursor: pointer;
 }
 
 .header_logo p > span{
@@ -73,6 +73,10 @@ header .container{
 .arrows{
     height: 3px;
     width: 5.999595642089844px;
+}
+.arrows2{
+    height: 4.949757099151611px;
+    width: 9.899454116821289px;
 }
 .nav{
     display: flex;
@@ -85,22 +89,30 @@ header .container{
 }
 .nav img {
     margin-left: 9px;
+    cursor: pointer;
 }
 .nav > li:not(:last-child){
     margin-right: 55px;
+}
+
+.header_right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .search_btn{
     height: 21.19485092163086px;
     width: 21.19485092163086px;
     margin-right: 30.8px;
-
+    cursor: pointer;
 }
 .lang_btn{
     height: 28px;
     width: 28px;
     display: flex;
     align-items: center;
+    cursor: pointer;
     margin: 0px 15px 0px 4px;
 }
 
@@ -108,6 +120,7 @@ header .container{
     height: 25px;
     width: 25px;
     margin-right: 25px;
+    cursor: pointer;
 }
 
 .mode_color{
@@ -152,6 +165,7 @@ header .container{
     right: 0%;
     top: -4.07%;
     bottom: 25.13%;
+    cursor: pointer;
 }
 
 
@@ -196,6 +210,7 @@ header .container{
 .icon_phone img{
     height: 81.09537506103516px;
     width: 81.09537506103516px;
+    cursor: pointer;
 }
 
 .pic_main{
@@ -211,3 +226,212 @@ header .container{
     margin: 0 auto;
     padding: 81px 0px 163px 0px;
 }
+
+.container_section1{
+    width: 1290px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: 60.4px;
+}
+
+.container_section1 > div{
+    height: 393.8980712890625px;
+    width: 408.78857421875px;
+    border-radius: 20px;
+    background: #FFFFFF;
+    box-shadow: 5px 4px 25px rgba(0, 0, 0, 0.1);
+}
+
+
+.banner1{
+    width: 90%;
+    padding-bottom: 47.8px;
+    padding-top: 42px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+.banners h3{
+    font-family: Arial;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 39.82px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: #604CDA;
+}
+.banners p{
+    width: 400px;
+    font-family: 'Arial-AMU';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: #1F1F1F;
+    margin: 0 auto;
+    padding-top: 20.77px;
+}
+
+.banner2_p{
+    width: 379px !important;
+    height: 117px;
+}
+.banner3_p{
+    width: 379px !important;
+    height: 117px;
+}
+
+
+.slider_icons{
+    display: flex;
+    justify-content: center;
+    margin: 60px 0px 85.16px 0px;
+}
+.slider_icons div:not(:last-child){
+    margin: 0px 15px 0px 0px;
+}
+.slider_icon{
+    width: 13px;
+    height: 13px;
+    left: 917.91px;
+    bottom: 6877.16px;
+    background: #0A072D;
+    opacity: 0.6;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.slider_icon_selected{
+    width: 28px;
+    height: 13px;
+    left: 973.91px;
+    bottom: 6877.16px;
+    background: #0A072D;
+    border-radius: 119px;
+    cursor: pointer;
+}
+
+.container_section2{
+    width: 1290px;
+    text-align: center;
+    margin: 0 auto;
+}
+.container_section2 h1{
+    font-family: Arial;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 39px;
+    line-height: 53px;
+    letter-spacing: 0.055em;
+    color: #0A072D;
+}
+
+.circles_section2{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 100px;
+}
+.circles_container1 p{
+    font-family: 'Arial-AMU';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    letter-spacing: 0.055em;
+    color: #000000;
+    height: 81px;
+    width: 212px;
+    margin: 0 auto;
+    padding-top: 41px;
+}
+
+.circles_container2 p{
+    font-family: 'Arial-AMU';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    letter-spacing: 0.055em;
+    color: #000000;
+    height: 81px;
+    width: 212px;
+    margin: 0 auto;
+    height: 54px;
+    width: 162px;
+    padding-top: 41px;
+}
+.circles_container3 p{
+    font-family: 'Arial-AMU';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    letter-spacing: 0.055em;
+    color: #000000;
+    height: 81px;
+    width: 212px;
+    margin: 0 auto;
+    height: 54px;
+    width: 153px;
+    padding-top: 41px;
+}
+.circles_container4 p{
+    font-family: 'Arial-AMU';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    letter-spacing: 0.055em;
+    color: #000000;
+    height: 81px;
+    width: 212px;
+    margin: 0 auto;
+    height: 54px;
+    width: 226px;
+    padding-top: 41px;
+}
+.circles_parent{
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 260px;
+    height: 260px;
+}
+.circles_child{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.circles_parent span {
+    position: absolute;
+    left: 0;
+    right: 0;
+    font-family: Arial;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 61px;
+    text-align: center;
+    letter-spacing: 0.055em;
+    color: #7584B1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
