--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -10,6 +10,12 @@
     font-style: normal;
     src: url('../../fonts/Arial-AMU-Regular.ttf');
 }
+@font-face {
+    font-family: "ArialArmST";
+    font-weight: normal;
+    font-style: normal;
+    src: url('../../fonts/ArialArmST.ttf');
+}
 
 *{
     box-sizing: border-box;
@@ -168,7 +174,15 @@ a{
     cursor: pointer;
 }
 
+.styles.section1{
 
+}
+.styles.section2{
+    
+}
+.section3{
+    margin-top: 195px;
+}
 .frame{
     padding-top: 95px;
 }
@@ -424,14 +438,125 @@ a{
     color: #7584B1;
 }
 
+.container_section3{
+    width: 1290px;
+    display: flex;
+    justify-content: space-between  ;
+    margin: 0 auto;
+}
+
+.pattern_section3{
+    display: flex;
+    align-items: center;
+    position: relative;
+    left: 4%;
+    height: 585px;
+    width: 586.7030639648438px;
+}
 
 
 
+.play_btn{
+    background-color: #7F6CF4;
+    border-radius: 50%;
+    height: 203.51528930664062px;
+    width: 203.51528930664062px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 29%;
+    cursor: pointer;
+}
+.pattern2{
+    height: 334.65057373046875px;
+    width: 334.6545104980469px;
+    position: absolute;
+    left: 17%;
+}
+
+.play_btn div img{
+    height: 65.34270477294922px;
+    width: 65.34270477294922px;
+}
+
+.about_us h1{
+    font-family: "ArialArmST";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 39px;
+    line-height: 53px;
+    letter-spacing: 0.055em;
+    color: #111111;
+    padding-bottom: 15px;
+}
+
+.about_us p{
+    font-family: "Arial-AMU";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: 0.055em;
+    color: #28272E;
+    padding-bottom: 89.16px;
+}
 
 
+.section4{
+    
+}
+.container_section2{
+    width: 1290px;
+    padding-top: 200px;
+}
 
+.container_section2 h1{
+    font-family: "ArialArmST";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 39px;
+    line-height: 53px;
+    letter-spacing: 0.055em;
+    color: #0A072D;
+    
+}
 
+.faculty{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 106.7px;
+}
 
+.facult_web{
+    background: #FFFFFF;    
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    height: 610.214599609375px;
+    width: 409.5425720214844px;
+    position: relative;
+}
+.facult_web_img{
+    position: absolute;
+    right: 15%;
+    top: -5.2%;
+    height: 444.75054931640625px;
+    width: 409.79718017578125px;
+}
+.facult_web_icon{
+    height: 208px;
+    width: 212px;
+}
+.facult_web_icon img{
+    top: 159px;
+    position: relative;
+    height: 208px;
+    width: 212px;
+    left: 98.8984375px; 
+}
 
-
-
+.icon_dev{
+    height: 210px;
+    width: 194.99966430664062px;
+    top: -80px !important;
+}
